SummaryList Icon align with Headings fixed

--- a/src/styles/partials/components/_summary-list.scss
+++ b/src/styles/partials/components/_summary-list.scss
@@ -28,6 +28,15 @@
     justify-content: flex-start;
     align-items: flex-start;
     margin-bottom: $default-margin;
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+      margin-top: 0px;
+    }
+
 
     p {
       color: $gray;
